--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   host: localhost
   pool: 5
   username: postgres
-  password: thisisapasswordmotherfucker
+  password: "call me postgres"
 
 production:
   adapter: postgresql
